Finished recipes API + working on contact us API
1. Fix responsiveness
2. contact-us API
3. some UI issues
4. change all px to rem
5. adjust the pastry image near the contact details in the tasty-pastries component
6. link the social icons

--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -7,20 +7,23 @@
       <div
         class="col-md-6 d-flex justify-content-center align-items-center flex-column"
       >
-        <form class="d-flex flex-column gap-3" action="">
+        <form class="d-flex flex-column gap-3" #contactUs="ngForm" (ngSubmit)="sendUserData(contactUs.value)">
           <input
             class="contact-info border-0"
             type="text"
+            name="name"
             placeholder="Full Name"
           />
           <input
             class="contact-info border-0"
             type="text"
+            name="email"
             placeholder="Email"
           />
           <input
             class="contact-info border-0"
             type="text"
+            name="phone"
             placeholder="Phone Number"
           />
         </form>
