--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -4,48 +4,21 @@
       <h1 class="title">RECIPES</h1>
     </div>
     <div class="recipes-list">
-      <div class="recipe-frame">
-        <img class="recipe" src="../../assets/recipe-1.jpg" alt="" />
-        <div class="p-3">
-          <p class="recipe-name">Bread omlette</p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-            atque voluptas in tempore, optio eos nam unde qui quos architecto
-            pariatur. Consequatur possimus accusantium expedita accusamus sunt,
-            pariatur sapiente unde.
-          </p>
-        </div>
-      </div>
-      <div class="recipe-frame">
-        <img class="recipe" src="../../assets/recipe-2.jpg" alt="" />
-        <div class="p-3">
-          <p class="recipe-name">Breakfast Potatoes</p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-            atque voluptas in tempore, optio eos nam unde qui quos architecto
-            pariatur. Consequatur possimus accusantium expedita accusamus sunt,
-            pariatur sapiente unde.
-          </p>
-        </div>
-      </div>
-      <div class="recipes-list">
+      <div *ngFor="let recipe of recipeList">
         <div class="recipe-frame">
-          <img class="recipe" src="../../assets/recipe-3.jpg" alt="" />
+          <img class="recipe" [src]="recipe.strMealThumb" alt="" />
           <div class="p-3">
-            <p class="recipe-name">Home-made Mandazi</p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-              atque voluptas in tempore, optio eos nam unde qui quos architecto
-              pariatur. Consequatur possimus accusantium expedita accusamus
-              sunt, pariatur sapiente unde.
-            </p>
+            <p class="recipe-name">{{ recipe.strMeal }}</p>
+            <p>{{ recipe.idMeal }}</p>
           </div>
         </div>
-
       </div>
     </div>
-     <div class="d-flex align-items-center justify-content-center mb-4">
-          <button class="btn button text-white">CONTACT US</button>
-        </div>
+    <div class="d-flex align-items-center justify-content-center mb-4">
+      <button class="btn button text-white">CONTACT US</button>
+    </div>
   </div>
 </div>
+
+
+
