--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -7,32 +7,39 @@
       <div
         class="col-md-6 d-flex justify-content-center align-items-center flex-column"
       >
+      <!-- (ngSubmit)="sendUserData(contactUs.value)" -->
         <form class="d-flex flex-column gap-3" #contactUs="ngForm" (ngSubmit)="sendUserData(contactUs.value)">
           <input
             class="contact-info border-0"
+            ngModel
             type="text"
             name="name"
             placeholder="Full Name"
           />
           <input
             class="contact-info border-0"
+            ngModel
             type="text"
             name="email"
             placeholder="Email"
           />
           <input
             class="contact-info border-0"
+            ngModel
             type="text"
             name="phone"
             placeholder="Phone Number"
           />
+          <div class=" d-flex align-items-center justify-content-center">
+          <button class="btn button m-3">SEND</button>
+        </div>
         </form>
-        <button class="btn button m-3">SEND</button>
+
       </div>
       <div
-        class="col-md-6 d-flex justify-content-center align-items-center flex-column"
+        class="col-md-6 d-flex justify-content-center flex-column"
       >
-        <div class="d-flex flex-row">
+        <div class="d-flex flex-row gap-3">
           <svg
             width="20"
             height="16"
@@ -48,7 +55,7 @@
 
           <p>upskilling.eg1@gmail.com</p>
         </div>
-        <div class="d-flex flex-row align-items-start">
+        <div class="d-flex flex-row align-items-start gap-3">
           <svg
             width="18"
             height="18"
